--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ body{
     }
 }
 
-@media (max-width: 600px) and (min-width: 850px) {
+@media (min-width: 600px) and (max-width: 850px) {
     .cards {
         width: 90%;
     }
