--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
     /* align-items: center; */
     align-content: center;
     justify-content: center;
+    gap: 70px;
 }
 
 .cards {
@@ -122,6 +123,7 @@ body{
 .card-body {
     background-color: var(--Dark-blue);
     padding: 1rem;
+    padding-bottom: 0px;
     width: auto;
     height: 140px;
     border-radius: 10px;
@@ -157,6 +159,10 @@ body{
     width: 15px;
    height: 3px;
 
+}
+.hours {
+    display: grid;
+    gap: 2px;
 }
 .img img {
     width: 50px;
